hydrate up to ch 4